@@ -7,8 +7,8 @@ AC_SUBST(CONFIGDIR)
 PACKAGE=bwidget
 
 MAJOR_VERSION=1
-MINOR_VERSION=2
-PATCHLEVEL=.1
+MINOR_VERSION=3
+PATCHLEVEL=.0
 
 VERSION=${MAJOR_VERSION}.${MINOR_VERSION}${PATCHLEVEL}
 NODOT_VERSION=${MAJOR_VERSION}${MINOR_VERSION}
