@@ -1,5 +1,10 @@
 2000-03-01  Eric Melski  <ericm@scriptics.com>
 
+	* spinbox.tcl: Changed bindings to be on class SpinBox instead of BwSpinBox,
+	and added class SpinBoxEntry to the bindtags of the SpinBox entry 
+	component.
+
+	* configure.in:
 	* pkgIndex.tcl: Bumped version to 1.3.0.
 
 	* tree.tcl: Changed focus redirect to use {after idle} to avoid
